# rgba8888-to-rgb332

./: Cargo.toml  LICENSE  README.md
example-aseprite/: scaledferris.ase
src/: converter.rs  lookup.rs  main.rs
