[package]
name = "rgba8888-to-rgb332"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive", "cargo"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
